@startuml
class SubscriptionController {
 +migrateAllSubscribers(Long currentPlanId, Long newPlanId);
}



class SubscriptionService {
 +migrateAllSubscribers(Long currentPlanId, Long newPlanId);
}
class SubscriptionServiceImpl{
+migrateAllSubscribers(Long currentPlanId, Long newPlanId)
}

interface SubscriptionRepository <<interface>> {
 +saveAll(subscriptions): Result
 +countSubscriptionsByPlan(currentPlanId, SubscriptionStatus.Active)
+findSubscriptionsByPlanType(plan1.getPlanType(), pageable)

}


class Subscription {
    -id
    -subType
    -date
    -subState
    -feeType
    Subscription(int id, string subType, date date, string subState, string feeType)
    +getID(): int
    +getSubType(): string
    +getDate(): date
    +getSubState(): string
    +getFeeType(): string

}

SubscriptionRepository "1" --> "0..*" Subscription:  records
SubscriptionController ..> SubscriptionService
SubscriptionServiceImpl ..> SubscriptionRepository
SubscriptionServiceImpl ..> Subscription
SubscriptionService ..> Subscription
SubscriptionServiceImpl .up.|> SubscriptionService
@enduml